clusters/home/apps/birdnet-go/birdnet-go/configs/birdnet-go-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: birdnet-go-ingressroute
  namespace: birdnet-go
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://birdnet-go.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Birdnet-Go
    gethomepage.dev/group: Smart Home
    gethomepage.dev/icon: mdi-audio
    gethomepage.dev/app: birdnet-go # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Birdnet-Go
    #gethomepage.dev/widget.type: "birdnet-go"
    #gethomepage.dev/widget.url: "https://birdnet-go.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`birdnet-go.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: birdnet-go
      port: 8080
  tls:
    secretName: birdnet-go-certificate-secret
